switch ArrayDeque impl and simplify usage